# pymqtt-demo

./: Dockerfile.app  Makefile  README.md  docker-compose.yml  pyproject.toml
mosquitto/: passwd
nginx/: pymqtt-demo.conf
pymqtt_demo/: pub.py  sub.py
pymqtt_demo/demo1/: main.py
pymqtt_demo/demo2/: main.py  mqtt_manager.py
pymqtt_demo/demo3/: main.py  mqtt_manager.py
